more trivial changes

--- a/welcomeindex.html
+++ b/welcomeindex.html
@@ -11,5 +11,6 @@
     <h2>Hello GitHub!</h2>
     <h3>Bla bla</h3>
     <p>Where is the IT person when you need one?</p>
+    <p></p>maybe maybe maybe</p>
 </body>
 </html>
